dirty overflow fix for smaller res

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,10 +2,12 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  min-height: 540px;
 }
 #game-banner {
   width: 100%;
   height: 100vh;
+  min-height: 540px;
   object-fit: cover;
   filter: brightness(0.8);
   object-position: 0 40%;
